[package]
name = "aaa-launcher"
version = "1.0.0"
edition = "2021"
description = "AAA MMORPG Engine Launcher - Fully Automated Deployment"
authors = ["AAA Studio"]
license = "Proprietary"
build = "build.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
console = "0.15"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5.0"
which = "6.0"
zip = "0.6"
tempfile = "3.10"
winreg = "0.52"
chrono = "0.4"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi", "shellapi", "winuser"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[[bin]]
name = "aaa-launcher"
path = "src/main.rs"
